# web-pi

./: .gitignore  AGENTS.md  LICENSE  README.backend.md  README.md  TODOS.md
.github/: CODEOWNERS
backend/: .env.example  integration_test_api.py  integration_test_rpc.py  observe_startup.py  pyproject.toml
backend/app/: main.py  session_manager.py
backend/app/api/: __init__.py  browse.py  chat.py  files.py  model.py  project.py  session.py
backend/app/schemas/: __init__.py
docs/: frontend-rpc-integration.md  rpc-session-shutdown.md
docs/design/: integration-test-plan.md  issue-11-model-cache-plan.md  session-manager-plan.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  FilePreview.tsx  ProjectTree.tsx  components.css
frontend/src/hooks/: useFileContent.ts  useModels.ts  useWebSocket.ts
frontend/src/services/: api.ts  mockData.ts
frontend/src/store/: AppContext.tsx
frontend/src/types/: index.ts
frontend/src/views/: FolderSelector.tsx  ModelSelector.tsx  Workspace.tsx  common.css  views.css
tests/: TODOS.md  conftest.py  integration_test_harness.py  pyproject.toml  test_flow3_multi_session.py  test_flow7_shutdown_cleanup.py  test_flow9_cached_models.py  test_utils.py
