[project]
name = "web-pi-tests"
version = "0.1.0"
description = "Integration tests for the web-pi backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.8.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "websockets",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.31",
]

[project.scripts]
run-tests = "integration_test_harness:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ty]
target-version = "3.13"
